--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-solr</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
